# BatchProcessCmd

./: CMakeLists.txt  batch02.txt  batchconfiguration.cpp  batchconfiguration.h  main.cpp  rhita3.txt
geometry/: element.cpp  element.h  mesh.cpp  mesh.h  node.cpp  node.h
meshes/: r1.msh  r5.msh  x1k.txt  x1k_noCZ.txt  x1k_sides.txt  x500.txt
meshes2d/: d100.msh  d1000.msh  d500.msh
txt/: d1000.txt
